# az-tf-practice

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml
.github/workflows/: codeql.yml  tf-environments.yml  tf-plan-apply.yml  tf-plan-appy.yml  tf-unit-test-environments.yml  tf-unit-test.yml  tf-unit-tests.yml  unit-tests.yml
app/app/: app.py  config.py
az-backend/: main.tf  outputs.tf
container/container-app/: main.tf  variables.tf
container/environment/dev/: imports.tf  main.tf  providers.tf
terraform/01_backend/backend/: main.tf
terraform/01_backend/environment/development/: main.tf  tfplan
terraform/02_keyvault/environment/dev/: main.tf  provider.tf  rbac.json
terraform/02_keyvault/keyvault/: main.tf  outputs.tf
terraform/03_container/container/: main.tf  principal.tf  variables.tf
terraform/03_container/environment/dev/: main.tf  provider.tf
terraform/az-backend/: main.tf  outputs.tf
terraform/environment/: main.tf  providers.tf
terraform/environment/development/: main.tf
