[tool.poetry]
name = "az-tf-practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
azure-identity = "^1.19.0"
azure-keyvault-secrets = "^4.9.0"
streamlit = "^1.40.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
